Added missing label for file search type 'image'

--- a/src/main/webapp/resources/JahiaSearch_de.properties
+++ b/src/main/webapp/resources/JahiaSearch_de.properties
@@ -59,6 +59,7 @@ searchForm.date.to = bis
 searchForm.date.today = heute
 searchForm.fileType.archive = Archiv
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Bild
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
