--- a/src/main/webapp/resources/JahiaSearch_es.properties
+++ b/src/main/webapp/resources/JahiaSearch_es.properties
@@ -39,6 +39,7 @@ searchForm.date.to = para
 searchForm.date.today = hoy
 searchForm.fileType.archive = Archivo
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Imagen
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
