--- a/src/main/webapp/resources/JahiaSearch_fr.properties
+++ b/src/main/webapp/resources/JahiaSearch_fr.properties
@@ -55,6 +55,7 @@ searchForm.date.to = à
 searchForm.date.today = aujourd'hui
 searchForm.fileType.archive = Archive
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Image
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
