--- a/src/main/webapp/resources/JahiaSearch_it.properties
+++ b/src/main/webapp/resources/JahiaSearch_it.properties
@@ -39,6 +39,7 @@ searchForm.date.to = a
 searchForm.date.today = oggi
 searchForm.fileType.archive = Archivio
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Immagine
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
