--- a/src/main/webapp/resources/JahiaSearch_pt.properties
+++ b/src/main/webapp/resources/JahiaSearch_pt.properties
@@ -39,6 +39,7 @@ searchForm.date.to = para
 searchForm.date.today = hoje
 searchForm.fileType.archive = Arquivo
 searchForm.fileType.excel = Microsoft Excel
+searchForm.fileType.image = Imagem
 searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
