SOC-246: added ... at the end of resource bundle

--- a/src/main/webapp/resources/JahiaSearch_it.properties
+++ b/src/main/webapp/resources/JahiaSearch_it.properties
@@ -61,4 +61,4 @@ searchForm.term.searchIn.files = documenti
 searchForm.term.searchIn.keywords = parole chiave
 searchForm.term.searchIn.siteContent = contenuti del sito
 searchForm.term.searchIn.title = titolo
-search.startSearching=Inizia la ricerca
+search.startSearching = Inizia la ricerca...
