SOC-246 - translation of search.startSearching in Italian

--- a/src/main/resources/resources/JahiaSearch_it.properties
+++ b/src/main/resources/resources/JahiaSearch_it.properties
@@ -27,6 +27,7 @@ search.results.pagination.next = Successivo
 search.results.pagination.previous = Precedente
 search.results.pagination.results = Risultati {0}-{1} su {2}
 search.results.title = I risultati della ricerca
+search.startSearching = Inizia la ricerca...
 searchForm.any = ogni
 searchForm.date.anytime = date indifferenti
 searchForm.date.from = da
