--- a/src/main/webapp/resources/JahiaSearch_de.properties
+++ b/src/main/webapp/resources/JahiaSearch_de.properties
@@ -6,7 +6,8 @@ jnt_openSearchDescriptor = OpenSearch Deskriptor
 jnt_searchResults = Suchergebnisse
 jnt_searchResults.autoSuggest = Vorschläge erlauben (Meinten Sie)
 jnt_searchResults.autoSuggestHitCount = Anzahl der Ergebnisse für Vorschläge
-jnt_searchResults.autoSuggestMinimumHitCount = Minimale Anzahl der Ergebnisse um Vorschläge anzuzeigen
+jnt_searchResults.autoSuggestMaxTermCount = Maximale Anzahl der Vorschläge
+jnt_searchResults.autoSuggestMinimumHitCount = Minimale Anzahl der Ergebnisse, um Vorschläge anzuzeigen
 jnt_simpleSearchForm = Einfache Suche
 # Search
 search = Suche
