--- a/src/main/webapp/resources/JahiaSearch_en.properties
+++ b/src/main/webapp/resources/JahiaSearch_en.properties
@@ -8,6 +8,7 @@ jnt_openSearchDescriptor = OpenSearch descriptor
 jnt_searchResults = Search results
 jnt_searchResults.autoSuggest = Allow suggestions (Did you mean)
 jnt_searchResults.autoSuggestHitCount = Number of suggested hits shown
+jnt_searchResults.autoSuggestMaxTermCount = Maximum number of suggestions
 jnt_searchResults.autoSuggestMinimumHitCount = Minimum hit count to start suggesting
 jnt_simpleSearchForm = Simple search form
 jnt_simpleSearchForm.result = Result page
