Fix automerge issues

--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -6,6 +6,7 @@ jnt_openSearchDescriptor = OpenSearch Deskriptor
 jnt_searchResults = Suchergebnisse
 jnt_searchResults.autoSuggest = Vorschläge erlauben (Meinten Sie)
 jnt_searchResults.autoSuggestHitCount = Anzahl der Ergebnisse für Vorschläge
+jnt_searchResults.autoSuggestMaxTermCount = Maximale Anzahl der Vorschläge
 jnt_searchResults.autoSuggestMinimumHitCount = Minimale Anzahl der Ergebnisse um Vorschläge anzuzeigen
 jnt_simpleSearchForm = Einfache Suche
 # Search
