--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -86,6 +86,7 @@ jnt_openSearchDescriptor=Descripteur OpenSearch
 jnt_searchResults=Résultats de la recherche
 jnt_searchResults.autoSuggest=Autoriser les suggestions
 jnt_searchResults.autoSuggestHitCount=Nombre de suggestions affichées
+jnt_searchResults.autoSuggestMaxTermCount = Nombre maximal de suggestions
 jnt_searchResults.autoSuggestMinimumHitCount=Minimum de résultats de suggestion pour commencer à les afficher
 jnt_simpleSearchForm=Formulaire de recherche simple
 jnt_simpleSearchForm.result=Page de résulat de recherche
