Consistency, typos/spelling, French translations RB update (1)

--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -84,10 +84,10 @@ jnt_jcrQuery.language=Type
 jnt_jcrQuery.statement=Requête
 jnt_openSearchDescriptor=Descripteur OpenSearch
 jnt_searchResults=Résultats de la recherche
-jnt_searchResults.autoSuggest=Autoriser les suggestions
+jnt_searchResults.autoSuggest=Autoriser les suggestions (Vouliez-vous dire)
 jnt_searchResults.autoSuggestHitCount=Nombre de suggestions affichées
 jnt_searchResults.autoSuggestMaxTermCount = Nombre maximal de suggestions
-jnt_searchResults.autoSuggestMinimumHitCount=Minimum de résultats de suggestion pour commencer à les afficher
+jnt_searchResults.autoSuggestMinimumHitCount=Minimum de résultats pour commencer à afficher les suggestions
 jnt_simpleSearchForm=Formulaire de recherche simple
 jnt_simpleSearchForm.result=Page de résulat de recherche
 search.advancedSearch.criteria.miscellanea.nodeType=Type de contenu:
