Consistency, typos/spelling, French translations RB update for Search

--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -31,7 +31,7 @@ jnt_customSearchForm.pathType.pages = les pages du site courant
 jnt_customSearchForm.pathType.currentpage = les pages sous la page courante.
 jnt_customSearchForm.pathType.custom = chemin personnalisé
 jnt_customSearchForm.path = si un chemin personnalisé a été choisi, merci de le spécifier
-jnt_customSearchForm.result = Page de résulat de recherche
+jnt_customSearchForm.result = R\u00E9sultats de recherche
 search.results.didYouMean = Essayez avec cette orthographe
 search.results.didYouMean.resultsFor = Résultats pour
 search.results.didYouMean.topResults = {0} premiers résultats affichés
@@ -46,8 +46,8 @@ search.results.title = Résultats de recherche
 searchForm.any = tout
 searchForm.date.anytime = dates indifférentes
 searchForm.date.from = de
-searchForm.date.lastMonth = le dernier mois
-searchForm.date.lastSixMonths = 6 derniers mois
+searchForm.date.lastMonth = le mois dernier
+searchForm.date.lastSixMonths = les 6 derniers mois
 searchForm.date.lastThreeMonths = les 3 derniers mois
 searchForm.date.lastWeek = la semaine dernière
 searchForm.date.range = plage de dates...
@@ -75,7 +75,7 @@ searchForm.term.searchIn.description = description
 searchForm.term.searchIn.fileContent = contenu des documents
 searchForm.term.searchIn.filename = nom de fichier
 searchForm.term.searchIn.files = documents
-searchForm.term.searchIn.keywords = mots clefs
+searchForm.term.searchIn.keywords = mots-cl\u00E9s
 searchForm.term.searchIn.siteContent = dans le contenu du site
 searchForm.term.searchIn.title = titre
 jnt_advancedSearchForm=Formulaire de recherche avancée
@@ -93,7 +93,7 @@ jnt_simpleSearchForm.result=Page de résulat de recherche
 search.advancedSearch.criteria.miscellanea.nodeType=Type de contenu:
 search.results.referenced.on=référencé sur
 search.results.usages=Apparaît dans
-search.startSearching=Début de la recherche...
+search.startSearching=Effectuez une recherche...
 search.submit=Chercher
 search.users.defaultText=Tapez les premières lettres du nom de l'utilsateur que vous recherchez
 jnt_jcrQuery=Requête JCR
