QA-8591: Add sorting of search results

--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -71,6 +71,9 @@ searchForm.nodeProperty.match.all_words = mit allen Wörtern
 searchForm.nodeProperty.match.any_word = mit irgendeinem der Wörter
 searchForm.nodeProperty.match.exact_phrase = mit der genauen Wortgruppe
 searchForm.nodeProperty.match.without_words = ohne die Wörter
+searchForm.orderBy = Sortieren nach
+searchForm.orderBy.date = Datum
+searchForm.orderBy.score = Relevanz
 searchForm.term.match.all_words = mit allen Wörtern
 searchForm.term.match.any_word = mit irgendeinem der Wörter
 searchForm.term.match.as_is = Freitextsuche
