--- a/src/main/resources/resources/JahiaSearch_en.properties
+++ b/src/main/resources/resources/JahiaSearch_en.properties
@@ -28,6 +28,7 @@ search.advancedSearch.criteria.miscellanea.location = Location:
 search.advancedSearch.criteria.miscellanea.nodeType = Content type:
 search.advancedSearch.criteria.miscellanea.pagePath = Page:
 search.advancedSearch.criteria.miscellanea.site = Site:
+search.advancedSearch.criteria.miscellanea.sortBy = Sort by:
 search.advancedSearch.criteria.miscellanea.title = More...
 search.advancedSearch.criteria.text.allWords = with all these words:
 search.advancedSearch.criteria.text.anyWord = one or more of these words:
@@ -85,6 +86,9 @@ searchForm.nodeProperty.match.all_words = contains all these words
 searchForm.nodeProperty.match.any_word = contains any of these words
 searchForm.nodeProperty.match.exact_phrase = contains the exact phrase
 searchForm.nodeProperty.match.without_words = does not contain
+searchForm.orderBy = Sort by
+searchForm.orderBy.date = Date
+searchForm.orderBy.score = Relevance
 searchForm.term.match.all_words = all these words
 searchForm.term.match.any_word = any of these words
 searchForm.term.match.as_is = free text search
