QA-8591: Allow sorting of search results

--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -25,6 +25,7 @@ search.advancedSearch.criteria.miscellanea.location = Ort:
 search.advancedSearch.criteria.miscellanea.nodeType = Kontenttyp:
 search.advancedSearch.criteria.miscellanea.pagePath = Seite:
 search.advancedSearch.criteria.miscellanea.site = Site:
+search.advancedSearch.criteria.miscellanea.sortBy = Sortieren nach:
 search.advancedSearch.criteria.miscellanea.title = Mehr...
 search.advancedSearch.criteria.text.allWords = mit all diesen Wörtern:
 search.advancedSearch.criteria.text.anyWord = eines oder mehrere dieser Wörter:
