--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -13,6 +13,7 @@ search.advancedSearch.criteria.miscellanea.language = Langue:
 search.advancedSearch.criteria.miscellanea.location = Lieu:
 search.advancedSearch.criteria.miscellanea.pagePath = Page:
 search.advancedSearch.criteria.miscellanea.site = Site:
+search.advancedSearch.criteria.miscellanea.sortBy = Trier par:
 search.advancedSearch.criteria.miscellanea.title = Plus...
 search.advancedSearch.criteria.text.allWords = Avec tous ces mots:
 search.advancedSearch.criteria.text.anyWord = Un ou plus de ces mots:
@@ -65,6 +66,9 @@ searchForm.nodeProperty.match.all_words = contenant tous ces mots
 searchForm.nodeProperty.match.any_word = contenant n'importe quel des mots suivants
 searchForm.nodeProperty.match.exact_phrase = contenant la phrase exacte
 searchForm.nodeProperty.match.without_words = ne contient pas
+searchForm.orderBy = Trier par
+searchForm.orderBy.date = date
+searchForm.orderBy.score = pertinence
 searchForm.term.match.all_words = tous les mots suivants
 searchForm.term.match.any_word = au moins un des mots suivants
 searchForm.term.match.as_is = recherche de texte libre
