--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -25,6 +25,7 @@ search.advancedSearch.criteria.miscellanea.location = Ort:
 search.advancedSearch.criteria.miscellanea.nodeType = Kontenttyp:
 search.advancedSearch.criteria.miscellanea.pagePath = Seite:
 search.advancedSearch.criteria.miscellanea.site = Site:
+search.advancedSearch.criteria.miscellanea.sortBy = Sortieren nach:
 search.advancedSearch.criteria.miscellanea.title = Mehr...
 search.advancedSearch.criteria.text.allWords = mit all diesen Wörtern:
 search.advancedSearch.criteria.text.anyWord = eines oder mehrere dieser Wörter:
@@ -71,6 +72,9 @@ searchForm.nodeProperty.match.all_words = mit allen Wörtern
 searchForm.nodeProperty.match.any_word = mit irgendeinem der Wörter
 searchForm.nodeProperty.match.exact_phrase = mit der genauen Wortgruppe
 searchForm.nodeProperty.match.without_words = ohne die Wörter
+searchForm.orderBy = Sortieren nach
+searchForm.orderBy.date = Datum
+searchForm.orderBy.score = Relevanz
 searchForm.term.match.all_words = mit allen Wörtern
 searchForm.term.match.any_word = mit irgendeinem der Wörter
 searchForm.term.match.as_is = Freitextsuche
