QA-9043: change mechanism to use dynamic views based on search provider for search results component

--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -102,3 +102,5 @@ search.submit=Chercher
 search.users.defaultText=Tapez les premières lettres du nom de l'utilsateur que vous recherchez
 jnt_jcrQuery=Requête JCR
 jnt_jcrQuery.maxItems=Nombre d'éléments à afficher
+jmix_searchResultsDynamicView=Vue dynamique (Provider de recherche -> vue)
+jmix_searchResultsDynamicView.j_dynamicViews=Sélectionnez une ou plusieurs vue(s) dynamique(s)
