[QA-9472] Exact value match types implemented

--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -72,6 +72,8 @@ searchForm.nodeProperty.match.all_words = mit allen Wörtern
 searchForm.nodeProperty.match.any_word = mit irgendeinem der Wörter
 searchForm.nodeProperty.match.exact_phrase = mit der genauen Wortgruppe
 searchForm.nodeProperty.match.without_words = ohne die Wörter
+searchForm.nodeProperty.match.exact_property_value = stimmt genau überein
+searchForm.nodeProperty.match.no_exact_property_value = stimmt nicht genau überein
 searchForm.orderBy = Sortieren nach
 searchForm.orderBy.date = Datum
 searchForm.orderBy.score = Relevanz
