--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -66,6 +66,8 @@ searchForm.nodeProperty.match.all_words = contenant tous ces mots
 searchForm.nodeProperty.match.any_word = contenant n'importe quel des mots suivants
 searchForm.nodeProperty.match.exact_phrase = contenant la phrase exacte
 searchForm.nodeProperty.match.without_words = ne contient pas
+searchForm.nodeProperty.match.exact_property_value = correspond exactement
+searchForm.nodeProperty.match.no_exact_property_value = ne correspond pas exactement
 searchForm.orderBy = Trier par
 searchForm.orderBy.date = date
 searchForm.orderBy.score = pertinence
