--- a/src/main/resources/resources/JahiaSearch_en.properties
+++ b/src/main/resources/resources/JahiaSearch_en.properties
@@ -86,6 +86,8 @@ searchForm.nodeProperty.match.all_words = contains all these words
 searchForm.nodeProperty.match.any_word = contains any of these words
 searchForm.nodeProperty.match.exact_phrase = contains the exact phrase
 searchForm.nodeProperty.match.without_words = does not contain
+searchForm.nodeProperty.match.exact_property_value = exactly matches
+searchForm.nodeProperty.match.no_exact_property_value = does not exactly match
 searchForm.orderBy = Sort by
 searchForm.orderBy.date = Date
 searchForm.orderBy.score = Relevance
