[QA-9669] Added missing i18n label for the video file type

--- a/src/main/resources/resources/JahiaSearch_it.properties
+++ b/src/main/resources/resources/JahiaSearch_it.properties
@@ -45,6 +45,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Video
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contiene tutte queste parole
 searchForm.nodeProperty.match.any_word = contiene alcuna di queste parole
