--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -67,6 +67,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Video
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = mit allen Wörtern
 searchForm.nodeProperty.match.any_word = mit irgendeinem der Wörter
