--- a/src/main/resources/resources/JahiaSearch_en.properties
+++ b/src/main/resources/resources/JahiaSearch_en.properties
@@ -81,6 +81,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Video
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contains all these words
 searchForm.nodeProperty.match.any_word = contains any of these words
