--- a/src/main/resources/resources/JahiaSearch_es.properties
+++ b/src/main/resources/resources/JahiaSearch_es.properties
@@ -44,6 +44,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Vídeo
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contiene todas estas palabras
 searchForm.nodeProperty.match.any_word = que contengan cualquiera de las palabras
