--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -61,6 +61,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Vidéo
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contenant tous ces mots
 searchForm.nodeProperty.match.any_word = contenant n'importe quel des mots suivants
