--- a/src/main/resources/resources/JahiaSearch_pt.properties
+++ b/src/main/resources/resources/JahiaSearch_pt.properties
@@ -44,6 +44,7 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
+searchForm.fileType.video = Vídeo
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contém todas estas palavras
 searchForm.nodeProperty.match.any_word = contiver qualquer uma dessas palavras
