Add missing resources / fix typos

--- a/src/main/resources/resources/JahiaSearch_en.properties
+++ b/src/main/resources/resources/JahiaSearch_en.properties
@@ -34,7 +34,7 @@ search.advancedSearch.criteria.text.allWords = with all these words:
 search.advancedSearch.criteria.text.anyWord = one or more of these words:
 search.advancedSearch.criteria.text.exactPhrase = this exact wording or phrase:
 search.advancedSearch.criteria.text.title = Text search
-search.advancedSearch.fileRepository = Advanced search in file repository
+search.advancedSearch.fileRepository = Advanced search in the file repository
 search.advancedSearch.portalContent = Advanced search in portal content
 search.advancedSearch.submit = Submit
 jnt_customSearchForm = Custom Search
@@ -42,11 +42,11 @@ jnt_customSearchForm.nodeType = Node Type
 jnt_customSearchForm.pathType = Look in
 jnt_customSearchForm.pathType.all = all contents
 jnt_customSearchForm.pathType.sites = all sites
-jnt_customSearchForm.pathType.currentsite = all contents of current site
-jnt_customSearchForm.pathType.pages = all pages of current site
+jnt_customSearchForm.pathType.currentsite = all contents of the current site
+jnt_customSearchForm.pathType.pages = all pages of the current site
 jnt_customSearchForm.pathType.currentpage = all pages under current page
 jnt_customSearchForm.pathType.custom = custom path
-jnt_customSearchForm.path = if custom path type selected, please indicate the path to use
+jnt_customSearchForm.path=if a custom path has selected, please indicate the path to use
 jnt_customSearchForm.result = Result Page
 search.results.didYouMean = Did you mean
 search.results.didYouMean.resultsFor = Results for
@@ -105,4 +105,4 @@ searchForm.term.searchIn.files = documents
 searchForm.term.searchIn.keywords = keywords
 searchForm.term.searchIn.siteContent = site content
 searchForm.term.searchIn.title = title
-search.users.defaultText=Type first letters of the user you want to add
+search.users.defaultText=Enter the first few letters of the name of the user you are looking for
