--- a/src/main/resources/resources/JahiaSearch_fr.properties
+++ b/src/main/resources/resources/JahiaSearch_fr.properties
@@ -1,14 +1,14 @@
 # Search
 search = Recherche
 # Advanced search
-search.advancedSearch.criteria.authorAndDate.created = Créé:
+search.advancedSearch.criteria.authorAndDate.created = Cr\u00E9\u00E9:
 search.advancedSearch.criteria.authorAndDate.createdBy = Auteur:
-search.advancedSearch.criteria.authorAndDate.modified = Modifié:
-search.advancedSearch.criteria.authorAndDate.modifiedBy = Dernier éditeur:
+search.advancedSearch.criteria.authorAndDate.modified = Modifi\u00E9:
+search.advancedSearch.criteria.authorAndDate.modifiedBy = Dernier \u00E9diteur:
 search.advancedSearch.criteria.authorAndDate.title = Auteur et date
-search.advancedSearch.criteria.miscellanea.categories = Catégories:
+search.advancedSearch.criteria.miscellanea.categories = Cat\u00E9gories:
 search.advancedSearch.criteria.miscellanea.fileType = Type de fichier:
-search.advancedSearch.criteria.miscellanea.itemsPerPage = Résultats par page:
+search.advancedSearch.criteria.miscellanea.itemsPerPage = R\u00E9sultats par page:
 search.advancedSearch.criteria.miscellanea.language = Langue:
 search.advancedSearch.criteria.miscellanea.location = Lieu:
 search.advancedSearch.criteria.miscellanea.pagePath = Page:
@@ -17,42 +17,42 @@ search.advancedSearch.criteria.miscellanea.sortBy = Trier par:
 search.advancedSearch.criteria.miscellanea.title = Plus...
 search.advancedSearch.criteria.text.allWords = Avec tous ces mots:
 search.advancedSearch.criteria.text.anyWord = Un ou plus de ces mots:
-search.advancedSearch.criteria.text.exactPhrase = Cette phrase précisément:
+search.advancedSearch.criteria.text.exactPhrase = Cette phrase pr\u00E9cis\u00E9ment:
 search.advancedSearch.criteria.text.title = Recherche textuelle
-search.advancedSearch.fileRepository = Recherche avancée dans les fichiers
-search.advancedSearch.portalContent = Recherche avancée dans le portail
+search.advancedSearch.fileRepository = Recherche avanc\u00E9e dans les fichiers
+search.advancedSearch.portalContent = Recherche avanc\u00E9e dans le portail
 search.advancedSearch.submit = Soumettre
-jnt_customSearchForm = Recherche personnalisée
+jnt_customSearchForm = Recherche personnalis\u00E9e
 jnt_customSearchForm.nodeType = Type de contenu
 jnt_customSearchForm.pathType = Rechercher dans
 jnt_customSearchForm.pathType.all = tous les contenus de la plateforme
 jnt_customSearchForm.pathType.sites = tous les sites
 jnt_customSearchForm.pathType.currentsite = tous les pages et contenus du site courant
 jnt_customSearchForm.pathType.pages = les pages du site courant
-jnt_customSearchForm.pathType.currentpage = les pages sous la page courante.
-jnt_customSearchForm.pathType.custom = chemin personnalisé
-jnt_customSearchForm.path = si un chemin personnalisé a été choisi, merci de le spécifier
+jnt_customSearchForm.pathType.currentpage=les sous-pages
+jnt_customSearchForm.pathType.custom = chemin personnalis\u00E9
+jnt_customSearchForm.path = si un chemin personnalis\u00E9 a \u00E9t\u00E9 choisi, merci de le sp\u00E9cifier
 jnt_customSearchForm.result = R\u00E9sultats de recherche
 search.results.didYouMean = Essayez avec cette orthographe
-search.results.didYouMean.resultsFor = Résultats pour
-search.results.didYouMean.topResults = {0} premiers résultats affichés
+search.results.didYouMean.resultsFor = R\u00E9sultats pour
+search.results.didYouMean.topResults = {0} premiers r\u00E9sultats affich\u00E9s
 # Search results
-search.results.found = Résultats de recherche pour {0}: {1} trouvé(s)
-search.results.no.results = Aucun document correspondant à votre recherche n'a été trouvé
+search.results.found = R\u00E9sultats de recherche pour {0}: {1} trouv\u00E9(s)
+search.results.no.results = Aucun document correspondant \u00E0 votre recherche n'a \u00E9t\u00E9 trouv\u00E9
 search.results.pagination.next = Suivant
-search.results.pagination.previous = Précédent
-search.results.pagination.results = Résultats {0}-{1} sur {2}
-search.results.title = Résultats de recherche
+search.results.pagination.previous = Pr\u00E9c\u00E9dent
+search.results.pagination.results = R\u00E9sultats {0}-{1} sur {2}
+search.results.title = R\u00E9sultats de recherche
 # Search form
 searchForm.any = tout
-searchForm.date.anytime = dates indifférentes
+searchForm.date.anytime = dates indiff\u00E9rentes
 searchForm.date.from = de
 searchForm.date.lastMonth = le mois dernier
 searchForm.date.lastSixMonths = les 6 derniers mois
 searchForm.date.lastThreeMonths = les 3 derniers mois
-searchForm.date.lastWeek = la semaine dernière
+searchForm.date.lastWeek = la semaine derni\u00E8re
 searchForm.date.range = plage de dates...
-searchForm.date.to = à
+searchForm.date.to = \u00E0
 searchForm.date.today = aujourd'hui
 searchForm.fileType.archive = Archive
 searchForm.fileType.excel = Microsoft Excel
@@ -61,10 +61,10 @@ searchForm.fileType.openoffice = OpenOffice
 searchForm.fileType.pdf = Adobe Acrobat PDF
 searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
-searchForm.fileType.video = Vidéo
+searchForm.fileType.video = Vid\u00E9o
 searchForm.fileType.word = Microsoft Word
 searchForm.nodeProperty.match.all_words = contenant tous ces mots
-searchForm.nodeProperty.match.any_word = contenant n'importe quel des mots suivants
+searchForm.nodeProperty.match.any_word=contenant n'importe un de ces mots
 searchForm.nodeProperty.match.exact_phrase = contenant la phrase exacte
 searchForm.nodeProperty.match.without_words = ne contient pas
 searchForm.nodeProperty.match.exact_property_value = correspond exactement
@@ -77,7 +77,7 @@ searchForm.term.match.any_word = au moins un des mots suivants
 searchForm.term.match.as_is = recherche de texte libre
 searchForm.term.match.exact_phrase = cette expression exacte
 searchForm.term.match.without_words = sans les mots
-searchForm.term.searchIn = chercher dans :
+searchForm.term.searchIn=chercher dans:
 searchForm.term.searchIn.description = description
 searchForm.term.searchIn.fileContent = contenu des documents
 searchForm.term.searchIn.filename = nom de fichier
@@ -85,23 +85,24 @@ searchForm.term.searchIn.files = documents
 searchForm.term.searchIn.keywords = mots-cl\u00E9s
 searchForm.term.searchIn.siteContent = dans le contenu du site
 searchForm.term.searchIn.title = titre
-jnt_advancedSearchForm=Formulaire de recherche avancée
+jnt_advancedSearchForm=Formulaire de recherche avanc\u00E9e
 jmix_searchFormContent=Composants de recherche
 jnt_jcrQuery.language=Type
-jnt_jcrQuery.statement=Requête
+jnt_jcrQuery.statement=Requ\u00EAte
 jnt_openSearchDescriptor=Descripteur OpenSearch
-jnt_searchResults=Résultats de la recherche
+jnt_searchResults=R\u00E9sultats de la recherche
 jnt_searchResults.autoSuggest=Autoriser les suggestions (Vouliez-vous dire)
-jnt_searchResults.autoSuggestHitCount=Nombre de suggestions affichées
+jnt_searchResults.autoSuggestHitCount=Nombre de suggestions affich\u00E9es
 jnt_searchResults.autoSuggestMaxTermCount = Nombre maximal de suggestions
-jnt_searchResults.autoSuggestMinimumHitCount=Minimum de résultats pour commencer à afficher les suggestions
+jnt_searchResults.autoSuggestMinimumHitCount=Nombre de r\u00E9sultats minimum pour commencer \u00E0 afficher les suggestions
 jnt_simpleSearchForm=Formulaire de recherche simple
-jnt_simpleSearchForm.result=Page de résulat de recherche
+jnt_simpleSearchForm.result=Page de r\u00E9sulat de recherche
 search.advancedSearch.criteria.miscellanea.nodeType=Type de contenu:
-search.results.referenced.on=référencé sur
-search.results.usages=Apparaît dans
+search.results.referenced.on=r\u00E9f\u00E9renc\u00E9 sur
+search.results.usages=Appara\u00EEt dans
 search.startSearching=Effectuez une recherche...
 search.submit=Chercher
-search.users.defaultText=Tapez les premières lettres du nom de l'utilsateur que vous recherchez
-jnt_jcrQuery=Requête JCR
-jnt_jcrQuery.maxItems=Nombre d'éléments à afficher
+search.users.defaultText=Tapez les premi\u00E8res lettres du nom de l'utilsateur que vous recherchez
+jnt_jcrQuery=Requ\u00EAte JCR
+jnt_jcrQuery.maxItems=Nombre d'\u00E9l\u00E9ments \u00E0 afficher
+search.results.sizeNotExact.found=R\u00E9sultats de la recherche pour {0}: environ {1} trouv\u00E9s
