--- a/src/main/resources/resources/JahiaSearch_de.properties
+++ b/src/main/resources/resources/JahiaSearch_de.properties
@@ -4,10 +4,10 @@ jnt_jcrQuery.language = Typ
 jnt_jcrQuery.statement = Anfrage
 jnt_openSearchDescriptor = OpenSearch Deskriptor
 jnt_searchResults = Suchergebnisse
-jnt_searchResults.autoSuggest = Vorschläge erlauben (Meinten Sie)
-jnt_searchResults.autoSuggestHitCount = Anzahl der Ergebnisse für Vorschläge
-jnt_searchResults.autoSuggestMaxTermCount = Maximale Anzahl der Vorschläge
-jnt_searchResults.autoSuggestMinimumHitCount = Minimale Anzahl der Ergebnisse um Vorschläge anzuzeigen
+jnt_searchResults.autoSuggest = Vorschl\u00E4ge erlauben (Meinten Sie)
+jnt_searchResults.autoSuggestHitCount = Anzahl der Ergebnisse f\u00FCr Vorschl\u00E4ge
+jnt_searchResults.autoSuggestMaxTermCount = Maximale Anzahl der Vorschl\u00E4ge
+jnt_searchResults.autoSuggestMinimumHitCount = Minimale Anzahl der Ergebnisse um Vorschl\u00E4ge anzuzeigen
 jnt_simpleSearchForm = Einfache Suche
 # Search
 search = Suche
@@ -27,21 +27,21 @@ search.advancedSearch.criteria.miscellanea.pagePath = Seite:
 search.advancedSearch.criteria.miscellanea.site = Site:
 search.advancedSearch.criteria.miscellanea.sortBy = Sortieren nach:
 search.advancedSearch.criteria.miscellanea.title = Mehr...
-search.advancedSearch.criteria.text.allWords = mit all diesen Wörtern:
-search.advancedSearch.criteria.text.anyWord = eines oder mehrere dieser Wörter:
+search.advancedSearch.criteria.text.allWords = mit all diesen W\u00F6rtern:
+search.advancedSearch.criteria.text.anyWord = eines oder mehrere dieser W\u00F6rter:
 search.advancedSearch.criteria.text.exactPhrase = genaues Wording oder genau Phrase:
 search.advancedSearch.criteria.text.title = Textsuche
 search.advancedSearch.fileRepository = Erweiterte Suche im Dateirepository
 search.advancedSearch.portalContent = Erweiterte Suche im Portalinhalt
 search.advancedSearch.submit = Senden
 search.results.didYouMean = Meinten Sie
-search.results.didYouMean.resultsFor = Ergebnisse für
+search.results.didYouMean.resultsFor = Ergebnisse f\u00FCr
 search.results.didYouMean.topResults = Die ersten {0} angezeigten Ergebnisse
 # Search results
-search.results.found = Suchergebnisse für {0}: {1} gefunden
-search.results.sizeNotExact.found = Suchergebnisse für {0}: ungefähr {1} gefunden
+search.results.found = Suchergebnisse f\u00FCr {0}: {1} gefunden
+search.results.sizeNotExact.found = Suchergebnisse f\u00FCr {0}: ungef\u00E4hr {1} gefunden
 search.results.no.results = Ihre Suche hat kein Dokument als Ergebnis geliefert
-search.results.pagination.next = Nächste
+search.results.pagination.next = N\u00E4chste
 search.results.pagination.previous = Vorherige
 search.results.pagination.results = Ergebnisse {0}-{1} von {2}
 search.results.referenced.on = verlinkt in
@@ -57,7 +57,7 @@ searchForm.date.lastMonth = letzter Monat
 searchForm.date.lastSixMonths = letzte sechs Monate
 searchForm.date.lastThreeMonths = letzte drei Monate
 searchForm.date.lastWeek = letzte Woche
-searchForm.date.range = auswählen...
+searchForm.date.range = ausw\u00E4hlen...
 searchForm.date.to = bis
 searchForm.date.today = heute
 searchForm.fileType.archive = Archiv
@@ -69,25 +69,40 @@ searchForm.fileType.powerpoint = Microsoft PowerPoint
 searchForm.fileType.rtf = Rich Text Format
 searchForm.fileType.video = Video
 searchForm.fileType.word = Microsoft Word
-searchForm.nodeProperty.match.all_words = mit allen Wörtern
-searchForm.nodeProperty.match.any_word = mit irgendeinem der Wörter
+searchForm.nodeProperty.match.all_words = mit allen W\u00F6rtern
+searchForm.nodeProperty.match.any_word = mit irgendeinem der W\u00F6rter
 searchForm.nodeProperty.match.exact_phrase = mit der genauen Wortgruppe
-searchForm.nodeProperty.match.without_words = ohne die Wörter
-searchForm.nodeProperty.match.exact_property_value = stimmt genau überein
-searchForm.nodeProperty.match.no_exact_property_value = stimmt nicht genau überein
+searchForm.nodeProperty.match.without_words = ohne die W\u00F6rter
+searchForm.nodeProperty.match.exact_property_value = stimmt genau \u00FCberein
+searchForm.nodeProperty.match.no_exact_property_value = stimmt nicht genau \u00FCberein
 searchForm.orderBy = Sortieren nach
 searchForm.orderBy.date = Datum
 searchForm.orderBy.score = Relevanz
-searchForm.term.match.all_words = mit allen Wörtern
-searchForm.term.match.any_word = mit irgendeinem der Wörter
+searchForm.term.match.all_words = mit allen W\u00F6rtern
+searchForm.term.match.any_word = mit irgendeinem der W\u00F6rter
 searchForm.term.match.as_is = Freitextsuche
 searchForm.term.match.exact_phrase = mit der genauen Wortgruppe
-searchForm.term.match.without_words = ohne die Wörter
+searchForm.term.match.without_words = ohne die W\u00F6rter
 searchForm.term.searchIn = suche in:
 searchForm.term.searchIn.description = Beschreibung
 searchForm.term.searchIn.fileContent = Dokumenteninhalte
 searchForm.term.searchIn.filename = Dateiname
 searchForm.term.searchIn.files = Dokumenten
-searchForm.term.searchIn.keywords = Schlüsselwörter
+searchForm.term.searchIn.keywords = Schl\u00FCsselw\u00F6rter
 searchForm.term.searchIn.siteContent = Siteinhalte
 searchForm.term.searchIn.title = Titel
+jnt_jcrQuery.maxItems=Anzahl der anzuzeigenden Elemente
+jnt_simpleSearchForm.result=Ergebnisseite
+jnt_customSearchForm=Benutzerdefinierte Suche
+jnt_customSearchForm.nodeType=Art des Inhalts
+jnt_customSearchForm.pathType=Suchen in
+jnt_customSearchForm.pathType.all=alle Inhalte der Plattform
+jnt_customSearchForm.pathType.sites=alle Websites
+jnt_customSearchForm.pathType.currentsite=alle Seiten und Inhalte der Website
+jnt_customSearchForm.pathType.pages=die Seiten der Website
+jnt_customSearchForm.pathType.currentpage=die Unterseiten
+jnt_customSearchForm.pathType.custom=benutzerdefinierter Pfad
+jnt_customSearchForm.path=Wenn ein benutzerdefinierter Pfad ausgew\u00E4hlt wurde, geben Sie diesen bitte an
+jnt_customSearchForm.result=Suchergebnisse
+jnt_jcrQuery=JCR-Anfrage
+search.users.defaultText=Geben Sie die ersten Buchstaben des Namens des gesuchten Benutzers ein
